Mouse movement fixed

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 <body>
     <div class="sidebar">
         <!-- Insert your control elements here -->
-        <button>Button 1</button><br>
-        <button>Button 2</button><br>
-        <button>Button 3</button><br>
-        <input type="text"><br>
+        <button onclick="clear()">Clear</button><br>
     </div>
 
     <div class="content">
