Clear button fixed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <!-- Insert your control elements here -->
-        <button onclick="clear()">Clear</button><br>
+        <button id="clearButton">Clear</button><br>
     </div>
 
     <div class="content">
