--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="sidebar">
+        <label><input type="checkbox" id="drawCrossesCheckbox">Draw crosses</label><br>
+        <input class="input" type="number" min="10" max="1000" id="sizeXInput" placeholder="Enter a X size (10-1000)"><br>
+        <input class="input" type="number" min="10" max="1000" id="sizeYInput" placeholder="Enter a Y size (10-1000)"><br>
         <button id="clearButton">Clear</button><br>
     </div>
 
