cursorStates and movement added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="content">
-        <div id="canvas_top_left"></div>
+        <div id="canvas_control"></div>
         <div id="canvas_top"></div>
         <div id="canvas_left"></div>
         <div id="canvas_main"></div>
