--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Crochet Commander</title>
+  <title>My Crochet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Use MyCrochet.live to easily create and design mosaic crochet patterns. Perfect for both beginners and professionals.">
+  <meta name="keywords" content="mosaic crochet, crochet design, crochet patterns, crochet app">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://cdn.amplitude.com/libs/analytics-browser-2.7.3-min.js.gz"></script><script src="https://cdn.amplitude.com/libs/plugin-session-replay-browser-1.2.3-min.js.gz"></script><script src="https://cdn.amplitude.com/libs/plugin-autocapture-browser-0.9.0-min.js.gz"></script><script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1})).promise.then(function() {window.amplitude.add(window.amplitudeAutocapturePlugin.plugin());window.amplitude.init('c749785362c12c11016242cbdc4d1367');});</script>
 </head>
